...
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Botón Registrar -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnRegistrar"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="+ Crear Cuenta"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
...
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <!-- Enlace para volver al Login -->
            <TextView
                android:id="@+id/tvYaTengoCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="¿Ya tienes cuenta? Inicia sesión"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:gravity="center"
...
